Removed penalties in favour of new feature, made sure it all works nice. Also did colour/accent-style for positions

--- a/SimTECH/SimTECH/Components/DriverGraphic.razor
+++ b/SimTECH/SimTECH/Components/DriverGraphic.razor
@@ -60,7 +60,7 @@
     {
         get
         {
-            return $"background-color:{Colour}";
+            return $"background-color:{Colour} !important";
         }
     }
 
@@ -68,7 +68,7 @@
     {
         get
         {
-            return $"color:{Colour}";
+            return $"color:{Colour} !important";
         }
     }
 }
