--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -52,7 +52,7 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Incident</th>
-                                <th></th>
+                                <th>TODO</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
@@ -62,7 +62,7 @@
                                 <tr>
                                     <td></td>
                                     <td>@result.IncidentId.GetValueOrDefault()</td>
-                                    <td>TODO</td>
+                                    <td></td>
                                     <td>@result.Status</td>
                                 </tr>
                             }
@@ -73,12 +73,12 @@
         </MudItem>
 
         <MudItem xs="3">
-            <MudPaper>
+            <MudPaper Class="mud-height-full">
                 <MudText>Placeholder</MudText>
             </MudPaper>
         </MudItem>
         <MudItem xs="6">
-            <MudPaper>
+            <MudPaper Class="mud-height-full">
                 <MudStack Spacing="6">
                     <DriverGraphic FirstName="Mr." LastName="Mister" Abbreviation="MIS" Number="77"
                                Team="Racing Team" Colour="@Color.Secondary.ToString()" Position="3" />
@@ -90,7 +90,7 @@
             </MudPaper>
         </MudItem>
         <MudItem xs="3">
-            <MudPaper>
+            <MudPaper Class="mud-height-full">
                 <MudText>Placeholder</MudText>
             </MudPaper>
         </MudItem>
