--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -30,8 +30,8 @@
                                 </MudTh>
                             </HeaderContent>
                             <RowTemplate>
-                                <MudTd Class="number-col" Style="@(ViewHelper.SetAccentColour(context.Accent))">
-                                    <MudText Typo="Typo.caption">@context.Position</MudText>
+                                <MudTd Class="number-col">
+                                    <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
                                 </MudTd>
                                 <MudTd Class="accent-cell">
                                     <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
@@ -67,8 +67,8 @@
                                 <MudTh>PTS</MudTh>
                             </HeaderContent>
                             <RowTemplate>
-                                <MudTd DataLabel="#" Style="@(ViewHelper.SetAccentColour(context.Accent))" Class="number-col">
-                                    <MudText Typo="Typo.caption">@context.Position</MudText>
+                                <MudTd DataLabel="#" Class="number-col">
+                                    <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
                                 </MudTd>
                                 <MudTd Class="accent-cell">
                                     <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
@@ -120,8 +120,8 @@
                         <MudTh class="number-col">AVG</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd Class="number-col" Style="@(ViewHelper.SetAccentColour(context.Accent))">
-                            <MudText Typo="Typo.caption">@context.Position</MudText>
+                        <MudTd Class="number-col">
+                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
                         </MudTd>
                         <MudTd Class="accent-cell">
                             <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
@@ -187,8 +187,8 @@
                     <MudTh>AVG</MudTh>
                 </HeaderContent>
                 <RowTemplate>
-                    <MudTd Class="number-col" Style="@(ViewHelper.SetAccentColour(context.Accent))">
-                        <MudText Typo="Typo.caption">@context.Position</MudText>
+                    <MudTd Class="number-col">
+                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
                     </MudTd>
                     <MudTd Class="accent-cell">
                         <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
