--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -32,6 +32,10 @@
     padding: 5px 2px !important;
 }
 
+.text-border-stroke {
+    -webkit-text-stroke: 1px black;
+}
+
 html, body {
     font-family: NovaRegular;
     font-size: 20px;
