--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -14,8 +14,6 @@
                 <MudText Typo="Typo.overline">Config</MudText>
                 <MudText Typo="Typo.body2">Fatal odds: @_config.Value.FatalityChance</MudText>
                 <MudText Typo="Typo.body2">Dsq odds: @_config.Value.DisqualifyChance</MudText>
-                <MudText Typo="Typo.body2">Gap marge p/pt: @_config.Value.GapMarge</MudText>
-                <MudText Typo="Typo.body2">Team status car mod: @_config.Value.CarDriverStatusModifier</MudText>
                 <MudText Typo="Typo.body2">Mistake rolls: @_config.Value.MistakeAmountRolls</MudText>
                 <MudText Typo="Typo.body2">Mistake min rng: @_config.Value.MistakeLowerValue</MudText>
                 <MudText Typo="Typo.body2">Mistake max rng: @_config.Value.MistakeUpperValue</MudText>
@@ -31,27 +29,9 @@
                 <MudText Typo="Typo.overline">
                     Config
                 </MudText>
-                <MudText Typo="Typo.body2">
-                    Sunny engine multiplier: @_config.Value.SunnyEngineMultiplier
-                </MudText>
-                <MudText Typo="Typo.body2">
-                    Overcast engine multiplier: @_config.Value.OvercastEngineMultiplier
-                </MudText>
-                <MudText Typo="Typo.body2">
-                    Wet engine multiplier: @_config.Value.WetEngineMultiplier
-                </MudText>
-                <MudText Typo="Typo.body2">
-                    Rain RNG: @_config.Value.RainAdditionalRNG
-                </MudText>
-                <MudText Typo="Typo.body2">
-                    Storm RNG: @_config.Value.StormAdditionalRNG
-                </MudText>
-                <MudText Typo="Typo.body2">
-                    Rain reliability: @_config.Value.RainDriverReliabilityModifier
-                </MudText>
-                <MudText Typo="Typo.body2">
-                    Storm reliability: @_config.Value.StormDriverReliabilityModifier
-                </MudText>
+                <MudText Typo="Typo.body2">Gap marge p/pt: @_config.Value.GapMarge</MudText>
+                <MudText Typo="Typo.body2">Team status car mod: @_config.Value.CarDriverStatusModifier</MudText>
+                <MudText Typo="Typo.body2">Use personal numbers: @_config.Value.PersonalNumbers</MudText>
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6">
