--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -47,7 +47,7 @@ else
                 </HeaderContent>
                 <RowTemplate>
                     <MudTd Class="number-col" Style="@PositionCutoffStyles(context.PositionQ1, Model.QualyAmountQ2, Model.MaximumRaceDrivers)">
-                        <MudText Typo="Typo.caption">@context.PositionQ1</MudText>
+                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.PositionQ1</MudText>
                     </MudTd>
                     <MudTd Class="pa-0">
                         <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
@@ -119,7 +119,7 @@ else
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd Style="@PositionCutoffStyles(context.PositionQ2, Model.QualyAmountQ3)">
-                            <MudText Typo="Typo.caption">@context.PositionQ2</MudText>
+                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.PositionQ2</MudText>
                         </MudTd>
                         <MudTd Class="pa-0">
                             <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
@@ -196,7 +196,7 @@ else
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd>
-                            <MudText Typo="Typo.caption">@context.PositionQ3</MudText>
+                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.PositionQ3</MudText>
                         </MudTd>
                         <MudTd Class="pa-0">
                             <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
@@ -359,13 +359,14 @@ else
 
     private async Task Finish()
     {
-        // Check for the possible penalties and consider them when making the positions
+        // Check for the possible penalties and apply assigning new positions
         int positionIndexer = 0;
         var positionResults = Model.QualifyingDrivers
             .OrderBy(e => e.PenaltyPosition())
             .ToDictionary(e => e.ResultId, e => ++positionIndexer);
 
         await _raceService.PersistGridPositions(positionResults, RaceId, Model.MaximumRaceDrivers);
+        await _raceService.ConsumePenalties(Model.PenaltiesToConsume, RaceId);
 
         _nav.NavigateTo("/raceweek/" + RaceId);
     }
